# rustSystemAgent

./: .env.example  Cargo.toml  README.md  install.sh
src/: agent.rs  config.rs  llm.rs  main.rs
src/tools/: file.rs  memory.rs  mod.rs  shell.rs  web_fetch.rs  web_search.rs
