[package]
name = "rust-system-agent"
version = "0.1.0"
edition = "2021"
description = "A Rust-based intelligent system agent with tool-calling capabilities"

[[bin]]
name = "rsa"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "14"
dotenvy = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
